--- a/app/scheduler/observations/observations-detail.html
+++ b/app/scheduler/observations/observations-detail.html
@@ -46,13 +46,13 @@
                             <span flex class="subheader-text">
                                 <span>Description</span>
                             </span>
-                            <span style="width: 160px" class="subheader-text">
+                            <span style="width: 150px" class="subheader-text">
                                 <span>Verification State</span>
                             </span>
-                            <span style="width: 70px" class="subheader-text">
+                            <span style="width: 75px" class="subheader-text">
                                 <span>Ready</span>
                             </span>
-                            <span style="width: 110px" class="subheader-text">
+                            <span style="width: 100px" class="subheader-text">
                                 <span>Type</span>
                             </span>
                             <span style="width: 230px" class="subheader-text">
@@ -66,28 +66,27 @@
                          ng-class="{'selected-schedule-row': item.state !== 'ACTIVE' && item === vm.selectedSchedule,
                                 'schedule-row-executing': item.state === 'ACTIVE' && item !== vm.selectedSchedule,
                                 'schedule-row-executing-and-selected': item.state === 'ACTIVE' && item === vm.selectedSchedule}"
-                         class="schedule-draft-item animate-repeat" layout="row"  layout-align="center center">
+                         class="schedule-draft-item animate-repeat" layout="row"  layout-align="start center">
 
                             <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary"
                                                 md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}" value="{{item.progress}}"
                                                 style="position: absolute; left: 0; right: 0; margin-top: -5px;">
                             </md-progress-linear>
-                            <md-tooltip ng-if="item.pendingVerify">Verification State: {{item.verification_state}}</md-tooltip>
-                            <div layout="row" class="schedule-block-name-div">
-                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      class="schedule-block-id-text">{{item.id_code}}</span>
-                                <i>{{item.owner}}</i>
+                            <div layout="column" layout-align="start" style="padding-top: 4px;">
+                                    <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                          style="font-size: 14px; font-weight: bold"
+                                          ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
+                                    </span>
+                                <span><i>{{item.owner}}</i></span>
                             </div>
-                            <span flex style="margin-left: 5px; margin-top: 4px; width: 180px; overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
+                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
 
-                            <span style="margin-left: 5px; margin-top: 4px; width: 150px; margin-right: 3px;">{{item.verification_state}}</span>
-                            <span style="margin-left: 5px; margin-top: 4px; width: 70px; margin-right: 3px;"
+                            <span style="width: 150px">{{item.verification_state}}</span>
+                            <span style="width: 75px"
                                 ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
-                            <div style="min-width: 105px; margin-top: 4px; text-align: start;">
-                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      style="text-transform: uppercase;">{{item.type}}</span>
-                            </div>
-                            <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
+                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                  style="text-transform: uppercase; width: 105px">{{item.type}}</span>
+                            <span style="width: 140px;">{{item.desired_start_time}}</span>
                             <md-button md-theme="green" class="md-primary md-icon-button inline-action-button" ng-show="item.state !== 'ACTIVE' && !item.pendingVerify"
                                        ng-click="vm.executeSchedule(item, $event)"
                                        title="Execute">
@@ -134,7 +133,6 @@
                  ng-class="{'schedule-block-complete-list-min-height': completedScheduleBlockListVisible}">
                 <md-toolbar class="panel-toolbar md-whiteframe-z1" style="max-height: 64px">
                     <div layout="row" layout-align="start center" layout-padding flex>
-
                         <span style="margin-left: 8px; cursor: pointer;"
                               ng-init="completedScheduleBlockListVisible = false"
                               ng-click="completedScheduleBlockListVisible = !completedScheduleBlockListVisible;">
@@ -148,51 +146,48 @@
                         </md-button>
                     </div>
 
-                    <div flex class="unselectable list-subheader-title" style="padding-top: 8px; z-index: 0;" layout="row" layout-align="center center">
-                        <span style="max-width: 120px;min-width: 120px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('id_code')">
-                            <span style="padding: 8px">ID</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'id_code' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'id_code' && vm.completedOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
-                        <span flex style="width: 180px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('description')">
-                            <span style="padding: 8px">Description</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'description' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'description' && vm.completedOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
-                        <span style="max-width: 110px;min-width: 110px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('type')">
-                            <span style="padding: 8px">Type</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'type' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'type' && vm.completedOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
-                        <span style="max-width: 196px;min-width: 196px;" class="subheader-text" ng-click="vm.setCompletedOrderBy('desired_start_time')">
-                            <span style="padding: 8px">Desired Time</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.completedOrderBy.value === 'desired_start_time' && !vm.completedOrderBy.reverse, 'fa-caret-down': vm.completedOrderBy.value === 'desired_start_time' && vm.completedOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
+                    <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
+                         style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
+                            <span style="width: 120px" class="subheader-text">
+                                <span>ID</span>
+                            </span>
+                            <span flex class="subheader-text">
+                                <span>Description</span>
+                            </span>
+                            <span style="width: 130px" class="subheader-text">
+                                <span>State</span>
+                            </span>
+                            <span style="width: 130px" class="subheader-text">
+                                <span>Outcome</span>
+                            </span>
+                            <span style="width: 110px" class="subheader-text">
+                                <span>Type</span>
+                            </span>
+                            <span style="width: 196px" class="subheader-text">
+                                <span>Desired Time</span>
+                            </span>
                     </div>
                 </md-toolbar>
 
                 <div flex class="schedule-draft-data-list" style="padding: 0; direction: rtl; min-height: 45px;" ng-show="completedScheduleBlockListVisible">
                     <div ng-repeat="item in vm.scheduleCompletedData | filter:{sub_nr:vm.subarray_id} | regexSearch:vm.completedOrderByFields:vm.q3 | orderBy:vm.completedOrderBy.value:vm.completedOrderBy.reverse"
-                        class="schedule-draft-item" layout="column">
+                        class="schedule-draft-item" layout="column" style="height: 38px">
 
-                        <div style="" layout="row" layout-align="center center">
-                            <div layout="row" class="schedule-block-name-div">
+                        <div layout="row" layout-align="start center">
+                            <div layout="column" layout-align="start">
                                 <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      class="schedule-block-id-text" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
-                                <i>{{item.owner}}</i>
+                                      style="font-size: 14px; font-weight: bold"
+                                      ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
+                                </span>
+                                <span><i>{{item.owner}}</i></span>
                             </div>
-                            <span flex title="" style="margin-left: 5px; margin-top: 4px; width: 180px; overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
+                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
+                            <span style="width: 130px">{{item.state}}</span>
+                            <span style="width: 130px">{{item.outcome}}</span>
 
-                            <div style="min-width: 105px; margin-top: 4px; text-align: start;">
-                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      style="text-transform: uppercase;">{{item.type}}</span>
-                            </div>
-                            <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
+                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                  style="text-transform: uppercase; width: 105px">{{item.type}}</span>
+                            <span style="width: 150px">{{item.desired_start_time}}</span>
                             <md-button class="md-icon-button inline-action-button"
                                        ng-click="vm.cloneSchedule(item)" title="Clone To Draft">
                                 <md-icon class="fa" md-font-icon="fa-copy"></md-icon>
