--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -13,8 +13,8 @@
                 </md-button>
             </div>
 
-            <div flex class="unselectable list-subheader-title" layout="row" layout-align="center center">
-                <span style="max-width: 115px;min-width: 115px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
+            <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center">
+                <span style="width: 115px" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
                     <span style="padding-left: 8px;">ID</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
@@ -26,13 +26,25 @@
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
                           style="margin-right: 4px;"></span>
                 </span>
-                <span style="max-width: 142px;min-width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('type')">
+                <span style="width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('expected_duration')">
+                    <span style="padding: 8px">Expected Duration</span>
+                    <span class="fa"
+                          ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'expected_duration' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'expected_duration' && vm.draftsOrderBy.reverse}"
+                          style="margin-right: 4px;"></span>
+                </span>
+                <span style="width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('verification_state')">
+                    <span style="padding: 8px">Verification State</span>
+                    <span class="fa"
+                          ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'verification_state' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'verification_state' && vm.draftsOrderBy.reverse}"
+                          style="margin-right: 4px;"></span>
+                </span>
+                <span style="width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('type')">
                     <span style="padding: 8px">Type</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
                           style="margin-right: 4px;"></span>
                 </span>
-                <span style="max-width: 215px;min-width: 215px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                <span style="width: 215px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
                     <span style="padding: 8px">Desired Time</span>
                     <span class="fa"
                           ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
@@ -45,40 +57,41 @@
                  ng-click="vm.setSelectedScheduleDraft(item)"
                  ng-class="{'selected-draft-schedule-row': item.id_code === vm.selectedScheduleDraft.id_code}" class="schedule-draft-item animate-repeat-opacity" layout="column" post-ng-repeat-load-more>
                 <div layout="row" layout-align="center center" style="max-height: 38px;">
-                    <md-progress-circular md-theme="{{themePrimaryButtons}}" class="smaller-progress-circular" ng-if="item.pendingVerify" class="md-primary" md-mode="indeterminate">
-                    </md-progress-circular>
-                    <md-tooltip ng-if="item.pendingVerify">Verification State: {{item.verification_state}}</md-tooltip>
-
-                    <div layout="row" class="schedule-block-name-div">
-                        <span class="schedule-block-id-text"
-                              ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">
-                            {{item.id_code}}</span>
-                        <i>{{item.owner}}</i>
+                    <md-progress-linear ng-if="item.verification_state === 'VERIFYING'" class="md-primary" md-mode="indeterminate"
+                                        style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                    </md-progress-linear>
+                    <div layout="column" layout-align="start" style="padding-top: 4px; width: 125px">
+                        <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                              style="font-size: 14px; font-weight: bold"
+                              ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
+                        </span>
+                        <span><i>{{item.owner}}</i></span>
                     </div>
                     <input ng-if="item.editing" ng-change="item.isDirty = true;" type="text" ng-click="vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();" flex
                             class="schedule-item-description-input" style="height: 27px;"
                            ng-model="item.description" placeholder="Description"/>
                     <span ng-if="!item.editing" flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
 
-                    <md-select ng-if="item.editing" ng-model="item.type"  style="width: 126px; margin-left: 4px; margin-right:4px;"
+                    <md-select ng-if="item.editing" ng-model="item.type"  style="width: 126px; margin: 0 4px"
                                ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
                                class="md-primary" ng-click="item.isDirty = true; vm.setSelectedScheduleDraft(item, true); $event.stopPropagation();">
                         <md-option ng-value="type" ng-repeat="type in vm.types">{{type}}</md-option>
                     </md-select>
-                    <span ng-if="!item.editing" style="width: 134px; margin-left: 4px; margin-right:4px;"
+                    <span style="width: 134px; margin: 0 4px">{{item.expected_duration}}</span>
+                    <span style="width: 134px; margin: 0 4px">{{item.verification_state}}</span>
+                    <span ng-if="!item.editing" style="width: 134px; margin: 0 4px"
                           ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">
                         {{item.type}}</span>
                     <input ng-if="item.editing" ng-change="item.isDirty = true; vm.validateInputDate(item);" type="text"  title="UTC"
                            class="schedule-item-input schedule-item-date-input" ng-class="{'invalid-date-error': item.hasInvalidInput}"
                            ng-click="vm.openDatePicker(item, $event);" ng-model="item.desired_start_time" placeholder=""/>
-                    <span  ng-if="!item.editing" style="width: 140px;">{{item.desired_start_time}}</span>
+                    <span ng-if="!item.editing" style="width: 140px;">{{item.desired_start_time}}</span>
                     <span class="sb-row-button" ng-show="!item.editing"></span>
                     <span ng-if="item.pendingVerify" class="sb-row-button"></span>
                     <button ng-if="!item.pendingVerify" title="Save the draft" ng-show="item.isDirty || item.editing" style="transition: 0s;"  class="sb-row-button"
                                ng-click="vm.saveDraft(item); $event.stopPropagation();">
                         <span class="fa fa-check"></span>
                     </button>
-                    <!--ng-click="vm.openSchedulerEditMenu(item, $event);"-->
                     <md-menu ng-show="!item.pendingVerify" md-theme="{{themePrimaryButtons}}">
                         <md-button class="md-icon-button inline-action-button" ng-click="item.loadMenuContents = true; $mdOpenMenu(); $event.stopPropagation()"
                                    style="margin: 0">
