--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -21,68 +21,56 @@
                         <span ng-show="subarray.state === 'active' || subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{subarray.config_label}}</b></span>
                     </div>
                     <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
-                        style="padding: 0; margin:0; bottom:0; left: 0; position: absolute">
-                        <span style="max-width: 120px;min-width: 120px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('id_code')">
-                            <span style="padding: 8px">ID</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
-                        <span flex style="min-width: 300px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('description')">
-                            <span style="padding: 8px">Description</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
-                        <span style="max-width: 148px;min-width: 148px;" class="subheader-text-no-color">
-                            State
-                        </span>
-                        <span style="max-width: 135px;min-width: 135px;" class="subheader-text-no-color">
-                            Verification State
-                        </span>
-                        <span style="max-width: 122px;min-width: 122px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('type')">
-                            <span style="padding: 8px">Type</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
-
-                        <span style="max-width: 135px;min-width: 135px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('desired_start_time')">
-                            <span style="padding: 8px">Desired Time</span>
-                            <span class="fa"
-                                  ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
-                                  style="margin-right: 4px;"></span>
-                        </span>
+                         style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
+                            <span style="width: 125px" class="subheader-text">
+                                <span>ID</span>
+                            </span>
+                            <span flex class="subheader-text">
+                                <span>Description</span>
+                            </span>
+                            <span style="width: 150px" class="subheader-text">
+                                <span>Verification State</span>
+                            </span>
+                            <span style="width: 150px" class="subheader-text">
+                                <span>State</span>
+                            </span>
+                            <span style="width: 75px" class="subheader-text">
+                                <span>Ready</span>
+                            </span>
+                            <span style="width: 105px" class="subheader-text">
+                                <span>Type</span>
+                            </span>
+                            <span style="width: 150px" class="subheader-text">
+                                <span>Desired Time</span>
+                            </span>
                     </div>
 
                 </md-toolbar>
                 <div flex class="schedule-draft-data-list" ng-class="{'maintenance-bg':subarray.maintenance}">
-                    <div style="min-width: 650px !important;"
+                    <div style="padding: 0 4px"
                          ng-repeat="item in vm.scheduleData | filter:{sub_nr:subarray.id}"
                          class="schedule-draft-item animate-repeat" layout="column">
                         <div flex layout="row" layout-align="start center">
-                            <div layout="row" class="schedule-block-name-div" style="cursor: text">
+                            <md-progress-linear ng-if="item.state === 'ACTIVE'" class="md-primary"
+                                                md-mode="{{item.expected_duration_seconds? 'determinate' : 'indeterminate'}}" value="{{item.progress}}"
+                                                style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                            </md-progress-linear>
+                            <div layout="column" layout-align="start" style="padding-top: 4px; width: 120px">
                                 <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      class="schedule-block-id-text" style="cursor: pointer;" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}</span>
-                                <i>{{item.owner}}</i>
+                                      style="font-size: 14px; font-weight: bold"
+                                      ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
+                                </span>
+                                <span><i>{{item.owner}}</i></span>
                             </div>
+                            <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
 
-                            <span flex style="min-width: 300px; margin-left: 5px; margin-top: 4px; width: 180px; overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
-
-                            <span ng-class="{'green-color': item.state === 'ACTIVE'}"
-                                  style="margin-top: 4px; margin-right: 8px; margin-left: 4px; max-width: 135px;min-width: 135px;">
-                                {{item.state}}
-                            </span>
-                            <span style="margin-top: 4px; margin-right: 8px; margin-left: 4px; max-width: 135px;min-width: 135px;">
-                                {{item.verification_state}}
-                            </span>
-
-                            <div style="min-width: 105px; margin-top: 4px; text-align: start;">
-                                <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                      style="text-transform: uppercase;">{{item.type}}</span>
-                            </div>
-
-                            <span style="margin-left: 5px; margin-top: 4px; width: 140px; margin-right: 3px;">{{item.desired_start_time}}</span>
+                            <span style="width: 150px">{{item.verification_state}}</span>
+                            <span style="width: 150px" ng-class="{'green-color': item.state === 'ACTIVE'}">{{item.state}}</span>
+                            <span style="width: 75px"
+                                  ng-class="{'green-color': item.ready, 'red-color': !item.ready}">{{item.ready? 'READY' : 'NOT READY'}}</span>
+                            <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                                  style="text-transform: uppercase; width: 105px">{{item.type}}</span>
+                            <span style="width: 140px;">{{item.desired_start_time}}</span>
                         </div>
                     </div>
                 </div>
