--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -1,4 +1,4 @@
-<div flex layout="row" layout-align="start" style="min-width: 1220px; min-height: 500px; margin-top: 8px;" ng-controller="SubArraysCtrl as vm">
+<div flex layout="row" layout-align="start" style="min-width: 1280px; min-height: 500px; margin-top: 8px;" ng-controller="SubArraysCtrl as vm">
 
     <div flex layout="column" style="overflow: auto; padding-left: 8px; margin-right: 392px;">
         <div ng-repeat="subarray in vm.subarrays | filter: (vm.subarray_id || '') && {id: vm.subarray_id} | orderBy:'id'" class="md-whiteframe-z2 subarray-container animate-repeat" layout="row" layout-align="start"
@@ -21,33 +21,44 @@
                         <span ng-show="subarray.state === 'active' || subarray.config_label" title="Config Label"><i>Config Label: </i><b>{{subarray.config_label}}</b></span>
                     </div>
 
-                    <div flex style="padding: 0; margin:0; bottom:0; left: 0; position: absolute"
-                         layout="row" layout-align="start center" class="unselectable list-subheader-title">
-                        <span style="max-width: 120px;min-width: 120px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('id_code')">
-                            <span style="padding-left: 8px">ID</span>
+                    <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center"
+                         style="position: absolute; left: 8px; right: 8px; bottom: 0; padding: 0">
+                        <span style="width: 120px" class="subheader-text" ng-click="vm.setDraftsOrderBy('id_code')">
+                            <span>ID</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'id_code' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'id_code' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span flex style="min-width: 300px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('description')">
-                            <span style="padding: 8px">Description</span>
+                        <span flex style="width: 180px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('description')">
+                            <span>Description</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'description' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'description' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span style="max-width: 110px;min-width: 110px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('type')">
+                        <span style="width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('expected_duration')">
+                            <span>Expected Duration</span>
+                            <span class="fa"
+                                  ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'expected_duration' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'expected_duration' && vm.draftsOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span style="width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('verification_state')">
+                            <span>Verification State</span>
+                            <span class="fa"
+                                  ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'verification_state' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'verification_state' && vm.draftsOrderBy.reverse}"
+                                  style="margin-right: 4px;"></span>
+                        </span>
+                        <span style="width: 142px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('type')">
                             <span>Type</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'type' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'type' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span style="max-width: 80px;min-width: 80px;" class="subheader-text-no-color" ng-click="vm.setDraftsOrderBy('desired_start_time')">
-                            <span style="">Desired Time</span>
+                        <span style="width: 215px;" class="subheader-text" ng-click="vm.setDraftsOrderBy('desired_start_time')">
+                            <span>Desired Time</span>
                             <span class="fa"
                                   ng-class="{'fa-caret-up': vm.draftsOrderBy.value === 'desired_start_time' && !vm.draftsOrderBy.reverse, 'fa-caret-down': vm.draftsOrderBy.value === 'desired_start_time' && vm.draftsOrderBy.reverse}"
                                   style="margin-right: 4px;"></span>
                         </span>
-                        <span style="min-width: 38px;"></span>
                     </div>
                 </md-toolbar>
                 <div md-theme="{{themePrimary}}" flex class="schedule-draft-data-list" ng-class="{'maintenance-bg':subarray.maintenance}">
@@ -55,24 +66,23 @@
                          style="min-width: 650px !important;" flex layout="row" layout-align="start center"
                          ng-click="item.confirmDelete = false; vm.setSelectedScheduleDraft(item)"
                          ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}" class="schedule-draft-item animate-repeat" layout="column">
-                        <md-progress-circular md-theme="{{themePrimaryButtons}}" class="smaller-progress-circular" ng-if="item.pendingVerify" class="md-primary" md-mode="indeterminate">
-                        </md-progress-circular>
-                        <md-tooltip ng-if="item.pendingVerify">Verification State: {{item.verification_state}}</md-tooltip>
-
-                        <div layout="row" class="schedule-block-name-div" ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">
-                            <span class="schedule-block-id-text" style="cursor: pointer"
-                                  ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}">
-                                {{item.id_code}}</span>
-                            <i>{{item.owner}}</i>
-                        </div>
-
-                        <span flex style="min-width: 300px; margin-left: 5px; margin-top: 4px; width: 180px; overflow: hidden; text-overflow: ellipsis;" title="{{::item.description}}">{{::item.description}}</span>
-
-                        <div style="min-width: 105px; margin-top: 4px; text-align: start;">
+                        <md-progress-linear ng-if="item.verification_state === 'VERIFYING'" class="md-primary" md-mode="indeterminate"
+                                            style="position: absolute; left: 0; right: 0; margin-top: -5px;">
+                        </md-progress-linear>
+                        <div layout="column" layout-align="start" style="padding-top: 4px; width: 125px">
                             <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
-                                  style="text-transform: uppercase;">{{item.type}}</span>
+                                  style="font-size: 14px; font-weight: bold"
+                                  ng-click="$root.showSBDetails(item, $event);$event.stopPropagation();">{{item.id_code}}
+                            </span>
+                            <span><i>{{item.owner}}</i></span>
                         </div>
-                        <span style="margin-left: 5px; margin-top: 4px; width: 64px; margin-right: 3px; overflow: hidden; white-space: normal">{{item.desired_start_time}}</span>
+
+                        <span flex style="overflow: hidden; text-overflow: ellipsis;" title="{{item.description}}">{{item.description}}</span>
+                        <span style="width: 134px; margin: 0 4px">{{item.expected_duration}}</span>
+                        <span style="width: 134px; margin: 0 4px">{{item.verification_state}}</span>
+                        <span ng-class="{'manual-color': item.type === 'MANUAL', 'maintenance-color': item.type === 'MAINTENANCE', 'observation-color': item.type === 'OBSERVATION'}"
+                              style="width: 105px; text-transform: uppercase;">{{item.type}}</span>
+                        <span style="min-width: 186px;">{{item.desired_start_time}}</span>
                         <span class="inline-sb-button" ng-if="item.pendingVerify"></span>
                         <span class="inline-sb-button" ng-if="item.pendingVerify"></span>
 
